--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MaxSchmitz/shiny-spoon#readme",
   "dependencies": {
-    "@terra-money/terra.js": "^3.0.11"
+    "@terra-money/terra.js": "^3.0.11",
+    "dotenv": "^16.0.0"
   }
 }
