--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MaxSchmitz/shiny-spoon#readme",
   "dependencies": {
     "@terra-money/terra.js": "^3.0.11",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "isomorphic-fetch": "^3.0.0"
   }
 }
